[package]
name = "green-site-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
actix-web = { version = "4", features = ["rustls"] }
actix-multipart = "0.4"
green-site-backend-macros = { version = "0.1", path = "../green-site-backend-macros" }
serde = { version = "1", features = ["derive"] }
mime = "0.3"
env_logger = "0.9"
log = "0.4"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "mysql", "sqlite" ] }
suppaftp = { version = "4", features = ["async-native-tls-vendored"] }
native-tls = "0.2"
rand = "0.8"
bytes = "1"
lettre = { version = "0.10", features = ["tokio1-native-tls", "serde"] }
futures = "0.3"
imap = "2"
