[package]
name = "green-site-backend-macros-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
green-site-backend-macros-internal = { version = "0.1", path = "../green-site-backend-macros-internal" }
syn = {version="1",features=["full","fold"]}
proc-macro2 = "1"
quote = "1"
